--- a/MyDjango/templates/login.html
+++ b/MyDjango/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>欢迎进入登录页面</h1>
-
+<p>日期显示：{{ year }}年{{ month }}月</p>
 
 
 <form action="" method="POST" id="login-form" style="text-align:center;">
